@@ -218,6 +218,9 @@ void RemoveTaskbarIconOverlay(void);
 #define WM_MAXIMIZE_MAIN_WINDOW  (WM_USER + 1)
 #define WM_RESIZE_MAP            (WM_USER + 1)
 
+void StartCrashInfoCheck(void);
+void StopCrashInfoCheck(void);
+
 /* common global variables */
 extern HINSTANCE hInstance;
 extern HWND hWindow;
